--- a/POPs_fiskelever_sylvia.Rmd
+++ b/POPs_fiskelever_sylvia.Rmd
@@ -28,24 +28,19 @@ https://www.epa.gov/sites/default/files/2016-05/documents/tech_notes_6_dec2013_t
 Statistical Methods for Trend Detection and Analysis in the Environmental Sciences
 https://cran.r-project.org/web/packages/trend/vignettes/trend.pdf
 
+## Methods
+Statistical analyses were carried out in R version 4.2.1. Data with missing covariates or response variables were removed, and response variables were added one prior to logtransformation with base 10 to meet assumptions of homoscedasticity and normality while preserving zero-valued observations. The covariate length was also logtransformed. For each POP, a multiple linear regression model (mlr) with the covariates year, length and fat percentage was fitted to the cleaned and transformed data. To visually demonstrate the effect of year on the POP concentrations correcting for the other covariates, the conditional partial residuals versus year was plotted, keeping length and fat constant at their median values.
+
 ## Data cleaning
 
 ```{r}
-# exported .xlsx to .csv from the file received from Sylvia on mail 14/4/23 using Excel.
-raw_data <- read_csv2("data/Hele datasettet lipidvekt til Sylvia med fys param sfr.csv") %>%
-  clean_names() %>% mutate(log_hel_lengde_cm = log10(hel_lengde_cm)) %>% 
-  drop_na(log_hel_lengde_cm, fettinnhold_percent) %>%    select(year, species, log_hel_lengde_cm, fettinnhold_percent, matches("log.+ww")) %>%
-  # remove obs with no pop data
-  filter(if_any(matches("log.+ww"), ~ !is.na(.x))) %>%
-    pivot_longer(cols = matches("log.+ww"), names_to = "variable", values_to = "value")
-# aligned top columns and added species column in excel.
-# raw_data <-
-  
   raw_data <- read_excel("data/20230424_nordsjoen_stepan.xlsx", skip = 1) %>%
-    clean_names() %>%
+    clean_names() %>% 
     select(species, year, length_cm, fettinnhold_percent, matches("w_w")) %>%
     drop_na(species, year, length_cm, fettinnhold_percent) %>%
-    mutate(across(.cols = matches("w_w|length_cm"), .fn = ~ as.numeric(.x) %>% log10())) %>%
+    mutate(across(.cols = matches("w_w"), .fn = ~ log10(as.numeric(.x) + 1))) %>%
+      mutate(across(.cols = matches("length_cm"), .fn = ~ log10(as.numeric(.x)))) %>%
+  mutate(across(.cols = matches("fettinnhold_percent|year"), .fn = ~ as.numeric(.x))) %>% 
     rename_with(
       ~ str_replace_all(.x, c(
         "w_w" = "ww",
@@ -64,7 +59,7 @@ raw_data <- read_csv2("data/Hele datasettet lipidvekt til Sylvia med fys param s
 
 
 
-## Partial residual plot
+## Partial residuals
 
 Assuming the least square estimate of the covariates $X_{1}$, $X_{2}$ and $X_{3}$ and $y_i$ and $\epsilon_i$ is the response and residual for the i-th point:
 
@@ -79,94 +74,86 @@ r_i = y_i-f_1\left(x_{i 1}\right)-f_2\left(x_{i 2}\right) = \epsilon_i + f_3(x_{
 $$
 
 
-It must be emphasized that where $f_{n}$ in the simplest linear case corresponds to 
 
 $$
-f_n = b_n\cdot (x_n-\bar x_n),
+y_i = \hat b_0 + \hat b_{year}(year_{i})+ \hat b_{length}(length_{i})+\hat b_{fat pc}(fatperc_{i})+ \epsilon_i
 $$
-and *not* $f_n = b_n\cdot x_n$!
+or, similarly
 
 $$
-y_i = \hat b_0 + \hat b_{year}(year_{i})+ \hat b_{length}(length_{i})+\hat b_{fatperc}(fatperc_{i})+ \epsilon_i
-$$
-or, similarly (VERIFY)
-
-$$
- y_i = \hat b_{year}\cdot (x_{year}-\bar x_{year}) + \hat b_{length}\cdot (x_{length}-\bar x_{length}) + \hat b_{fatperc}\cdot (x_{fatperc}-\bar x_{fatperc}) 
+ y_i = \bar y + \hat b_{year}\cdot (x_{year}-\bar x_{year}) + \hat b_{length}\cdot (x_{length}-\bar x_{length}) + \hat b_{fatpc}\cdot (x_{fatpc}-\bar x_{fatpc})  + \epsilon_i
 $$
 ## Added-variable or partial regression plot TODO, outdated cleaning
 
 See: https://stackoverflow.com/questions/59150905/is-there-a-ggplot2-analogue-to-the-avplots-function-in-r , https://bookdown.org/rwnahhas/RMPH/mlr-viz-adj.html
 ```{r}
 # jtools::effect_plot(pop_lever)
-
-
-yz_lm <- function(df) {
-    lm(data = df, formula = value ~  hel_lengde_cm + fettinnhold_percent, na.action = na.exclude)
-}
-
-xz_lm <- function(df) {
-    lm(data = df, formula = year ~  hel_lengde_cm + fettinnhold_percent, na.action = na.exclude)
-}
-
-# exported .xlsx to .csv from the file received from Sylvia on mail 14/4/23 using Excel.
-# cleaning, removing unused variables
-pop_lever_added_var <- read_csv2("data/Hele datasettet lipidvekt til Sylvia med fys param sfr.csv") %>%
-  clean_names() %>%
-  select(year, area, species, hel_lengde_cm, fettinnhold_percent, matches("log.+ww")) %>%
-  filter(if_any(matches("log"), ~ !is.na(.x))) %>%
-  # pivoting to tidy data
-  pivot_longer(cols = matches("log.+ww"), names_to = "variable", values_to = "value") %>%
-  mutate(
-    year = as.integer(year)
-  ) %>%
-  # gjøre tidy
-  group_by(species, variable) %>%
-  nest() %>%
-  mutate(yz_model = map(data, yz_lm)) %>%
-  mutate(xz_model = map(data, xz_lm)) %>%
-  # glance gets the model summary variables
-  mutate(
-    # glance = map(model, broom::glance),
-    # # tidy gets summary variables of the model coefficients
-    # tidy = map(model, broom::tidy),
-    # augment gets per observation variables (e.g., residuals)
-    # augment = map2(model, data, ~ broom::augment(.x, .y)),
-    yz_resids = map2(yz_model, data, ~ (residuals(.x) + 
-                                          mean(.y$value, na.rm = TRUE) +
-                                          0
-                                        ) %>%
-      as_tibble() %>%
-      rename_with(.cols = everything(), .fn = ~ paste0(.x, "_yz_resids"))),
-     xz_resids = map2(xz_model, data, ~ (residuals(.x) + mean(.y$year)) %>%
-      as_tibble() %>%
-      rename_with(.cols = everything(), .fn = ~ paste0(.x, "_xz_resids"))),
-  ) %>% unnest(data, yz_resids , xz_resids)
-
-pop_lever_added_var %>% 
-  ggplot(aes(value_xz_resids, value_yz_resids)) +
-  geom_jitter(size = 0.2) +
-  facet_grid(species ~ variable, scales = "free") +
-  theme_bw() +
-  theme(
-    axis.text.x = element_text(angle = 90, hjust = 1)
-  ) +
-  scale_x_continuous(breaks = pretty_breaks())+ylab("pop_lever_added_var")
-
-# scatterplot
-pop_lever_added_var %>% 
-  ggplot(aes(year, value )) +
-  geom_jitter(size = 0.2) +
-  facet_grid(species ~ variable, scales = "free") +
-  theme_bw() +
-  theme(
-    axis.text.x = element_text(angle = 90, hjust = 1)
-  ) +
-  scale_x_continuous(breaks = pretty_breaks())+ylab("scatter")
+# 
+# 
+# yz_lm <- function(df) {
+#     lm(data = df, formula = value ~  hel_length_cm + fat_pc, na.action = na.exclude)
+# }
+# 
+# xz_lm <- function(df) {
+#     lm(data = df, formula = year ~  hel_length_cm + fat_pc, na.action = na.exclude)
+# }
+# 
+# # exported .xlsx to .csv from the file received from Sylvia on mail 14/4/23 using Excel.
+# # cleaning, removing unused variables
+# pop_lever_added_var <- read_csv2("data/Hele datasettet lipidvekt til Sylvia med fys param sfr.csv") %>%
+#   clean_names() %>%
+#   select(year, area, species, hel_length_cm, fat_pc, matches("log.+ww")) %>%
+#   filter(if_any(matches("log"), ~ !is.na(.x))) %>%
+#   # pivoting to tidy data
+#   pivot_longer(cols = matches("log.+ww"), names_to = "variable", values_to = "value") %>%
+#   mutate(
+#     year = as.integer(year)
+#   ) %>%
+#   # gjøre tidy
+#   group_by(species, variable) %>%
+#   nest() %>%
+#   mutate(yz_model = map(data, yz_lm)) %>%
+#   mutate(xz_model = map(data, xz_lm)) %>%
+#   # glance gets the model summary variables
+#   mutate(
+#     # glance = map(model, broom::glance),
+#     # # tidy gets summary variables of the model coefficients
+#     # tidy = map(model, broom::tidy),
+#     # augment gets per observation variables (e.g., residuals)
+#     # augment = map2(model, data, ~ broom::augment(.x, .y)),
+#     yz_resids = map2(yz_model, data, ~ (residuals(.x) + 
+#                                           mean(.y$value, na.rm = TRUE) +
+#                                           0
+#                                         ) %>%
+#       as_tibble() %>%
+#       rename_with(.cols = everything(), .fn = ~ paste0(.x, "_yz_resids"))),
+#      xz_resids = map2(xz_model, data, ~ (residuals(.x) + mean(.y$year)) %>%
+#       as_tibble() %>%
+#       rename_with(.cols = everything(), .fn = ~ paste0(.x, "_xz_resids"))),
+#   ) %>% unnest(data, yz_resids , xz_resids)
+# 
+# pop_lever_added_var %>% 
+#   ggplot(aes(value_xz_resids, value_yz_resids)) +
+#   geom_jitter(size = 0.2) +
+#   facet_grid(species ~ variable, scales = "free") +
+#   theme_bw() +
+#   theme(
+#     axis.text.x = element_text(angle = 90, hjust = 1)
+#   ) +
+#   scale_x_continuous(breaks = pretty_breaks())+ylab("pop_lever_added_var")
+# 
+# # scatterplot
+# pop_lever_added_var %>% 
+#   ggplot(aes(year, value )) +
+#   geom_jitter(size = 0.2) +
+#   facet_grid(species ~ variable, scales = "free") +
+#   theme_bw() +
+#   theme(
+#     axis.text.x = element_text(angle = 90, hjust = 1)
+#   ) +
+#   scale_x_continuous(breaks = pretty_breaks())+ylab("scatter")
 
 ```
-
-
 
 
 ## Conditional partial residual plots
@@ -175,7 +162,7 @@ pop_lever_added_var %>%
 # full linear regression model
 pop_lm <- function(in_dat) {
   lm(
-    data = in_dat, formula = value ~ year + log_hel_lengde_cm + fettinnhold_percent,
+    data = in_dat, formula = value ~ year + length_cm + fat_pc,
     na.action = na.exclude
   )
 }
@@ -184,29 +171,34 @@ pop_lm <- function(in_dat) {
 p_man <- raw_data %>%
   ungroup() %>%
   group_by(species, variable) %>%
-  nest() %>%
+  drop_na(value) %>% 
+  nest() %>% 
   # apply model and calculate medians of covariates
   mutate(
     model = map(data, pop_lm),
-    med_log_hel_lengde_cm = map(
+    med_length_cm = map(
       data,
-      ~ median(.x$log_hel_lengde_cm, na.rm = TRUE)
+      ~ median(.x$length_cm, na.rm = TRUE)
     ) %>% as.numeric(),
-    med_fettinnhold_percent = map(
+    med_fat_pc = map(
       data,
-      ~ median(.x$fettinnhold_percent, na.rm = TRUE)
+      ~ median(.x$fat_pc, na.rm = TRUE)
     ) %>% as.numeric(),
-    mean_log_hel_lengde_cm = map(
+    mean_length_cm = map(
       data,
-      ~ mean(.x$log_hel_lengde_cm, na.rm = TRUE)
+      ~ mean(.x$length_cm, na.rm = TRUE)
     ) %>% as.numeric(),
-    mean_fettinnhold_percent = map(
+    mean_fat_pc = map(
       data,
-      ~ mean(.x$fettinnhold_percent, na.rm = TRUE)
+      ~ mean(.x$fat_pc, na.rm = TRUE)
     ) %>% as.numeric(),
     mean_year = map(
       data,
       ~ mean(.x$year, na.rm = TRUE)
+    ) %>% as.numeric(),
+        mean_value = map(
+      data,
+      ~ mean(.x$value, na.rm = TRUE)
     ) %>% as.numeric()
   ) %>%
   mutate(
@@ -243,12 +235,19 @@ p_man <- raw_data %>%
 p_man %>%
   unnest(tidy, partial_resids, data, normal_resids, augment) %>%
   ungroup() %>%
-  ggplot(aes(year, (value_normal_resid + year * year_coeff + intercept_coeff + med_log_hel_lengde_cm * log_hel_lengde_cm_coeff + med_fettinnhold_percent * fettinnhold_percent_coeff))) +
+  ggplot(aes(year, (value_normal_resid + year * year_coeff + intercept_coeff + med_length_cm * length_cm_coeff + med_fat_pc * fat_pc_coeff))) +
   geom_jitter(size = 0.2, na.rm = T, height = 0, width = 0.2) +
-  geom_point(aes(year, value), size = 0.2, color = "green", position = position_jitternudge(width = 0.2, height = 0,
-                                     seed = 123, x = 0.5,
-                                     direction = "as.is",
-                                     nudge.from = "jittered"))+
+  # geom_point(aes(year, value), size = 0.2, color = "green", position = position_jitternudge(width = 0.2, height = 0,
+  #                                    seed = 123, x = 0.5,
+  #                                    direction = "as.is",
+  #                                    nudge.from = "jittered"))+
+  ### TEST COND PART RESID
+  # geom_point(aes(year, value_normal_resid + mean_value +
+  #                year_coeff*(year - mean_year) + length_cm_coeff*(med_length_cm - mean_length_cm) + fat_pc_coeff*(med_fat_pc - mean_fat_pc)), size = 0.2, color = "orange", position = position_jitternudge(width = 0.2, height = 0,
+  #                                    seed = 123, x = -0.5,
+  #                                    direction = "as.is",
+  #                                    nudge.from = "jittered"))+
+  ### TEST COND PART RESID EN
   stat_smooth(method = "lm", na.rm = TRUE, se = TRUE, color = "red", size = 0.5) +
   theme_bw() +
   theme(
@@ -258,77 +257,32 @@ p_man %>%
   geom_text(
     data = p_man %>% group_by(species, variable) %>%
       distinct(year_pval, .keep_all = TRUE), color = "red",
-    x = -Inf, y = -Inf, hjust = -0.05, vjust = -0.5, size = 2.5,
-    aes(label = paste("p-val:", round(year_pval %>% as.numeric(), digits = 6)))
+    x = -Inf, y = Inf, hjust = -0.05, vjust = 1.5, size = 2.5,
+    aes(label = paste("p-val:", round(year_pval %>% as.numeric(), digits = 4)))
+  ) +
+    geom_text(
+    data = p_man %>% unnest(tidy) %>% group_by(species, variable) %>%
+      distinct(year_coeff, .keep_all = TRUE), color = "red",
+    x = -Inf, y = Inf, hjust = -0.05, vjust = 3, size = 2.5,
+    aes(label = paste("slope:", round(year_coeff %>% as.numeric(), digits = 4)))
   ) +
   scale_x_continuous(breaks = c(2019, 2016, 2013, 2011, 2008, 2005, 2010)) +
   scale_y_continuous(breaks = pretty_breaks(n = 10)) +
-  ylab("Concentration [log(mg/kg)]") +
-  xlab("Year") +
+  ylab("log(Concentration + 1) [mg/kg]") +
+  xlab("Year | (Length and Fat)") +
   facet_grid(species ~ factor(variable, levels = c(
-    "log_pcb7_ww",
-    "log_ddt_ww",
-    "log_hch_ww",
-    "log_hcb_ww",
-    "log_tnc_ww",
-    "log_pbde_ww"
+    "pcb7_ww",
+    "ddt_ww",
+    "hch_ww",
+    "hcb_ww",
+    "tnc_ww",
+    "pbde_ww"
   )))
 
-ggsave("conditional_pr_sylvia_data.png")
+ggsave("conditional_pr_stepan_data.png",width = 12, height = 9)
 
 # comditional jtools and visreg
 p_man$visreg[[18]] + scale_y_continuous(breaks = pretty_breaks(n = 10))
 p_man$effect_plot[[18]]
 # patchwork::wrap_plots(p_man$visreg)
 ```
-
-## Normal
-
-```{r}
-p_man %>%
-  unnest(tidy, partial_resids, data, normal_resids, augment) %>%
-  ungroup() %>%
-  ggplot(aes(year, year_partial_resid)) +
-  geom_jitter(size = 0.2, na.rm = T, height = 0, width = 0.2) +
-  stat_smooth(method = "lm", na.rm = TRUE, se = TRUE, color = "red", size = 0.5) +
-    theme_bw() +
-  theme(
-    axis.text.x = element_text(angle = 90, hjust = 1),
-    legend.key = element_blank(), strip.background = element_rect(colour="black", fill="white")
-  ) +
-  geom_text(
-    data = p_man %>% group_by(species, variable) %>%
-      distinct(year_pval, .keep_all = TRUE), color = "red",
-    x = -Inf, y = -Inf, hjust = -0.05, vjust = -0.5, size = 2.5,
-    aes(label = paste("p-val:", round(year_pval %>% as.numeric(), digits = 6)))
-  ) +
-  scale_x_continuous(breaks = c(2019, 2016, 2013, 2011, 2008, 2005, 2010)) +
-  scale_y_continuous(breaks = pretty_breaks(n = 10)) +
-  ylab("Concentration [log(mg/kg)]") +
-  xlab("Year") +
-  facet_grid(species ~ factor(variable, levels = c(
-    "log_pcb7_ww",
-    "log_ddt_ww",
-    "log_hch_ww",
-    "log_hcb_ww",
-    "log_tnc_ww",
-    "log_pbde_ww"
-  )))
- 
-
-p_man %>% unnest(tidy, partial_resids, data, normal_resids, augment) %>% group_by(variable, species) %>%
-  summarise(median_presid = mean(year_partial_resid, na.rm = TRUE))
-```
-
-## Partial residual test
-
-```{r}
-p_man %>% unnest(normal_resids, tidy, data, partial_resids) %>% 
-  mutate(
-    partial_resids_man = value_normal_resid  + year_coeff * (year - mean_year)
-  ) %>% View()
-  
-
-```
-
-
